--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ibra1390/cse341-project2/issues"
   },
-  "homepage": "https://github.com/ibra1390/cse341-project2#readme"
+  "homepage": "https://github.com/ibra1390/cse341-project2#readme",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
